Fri Jun 25 13:41:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/src/Shapes_Control_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_Control_obj.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_Control_obj.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/ports/Shapes_Control_obj.idl:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/ports/Shapes_Control_obj.mpc:
          Moved the Shapes_Control_obj idl to the ports directory of the Shapes_asm.

Fri Jun 25 13:27:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Extended the release notes for 0.8.0, ACE_FOR_TAO MPC configuration
          is dropped for CIAO

Fri Jun 25 13:02:45 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Tutorial
        * connectors/ami4ccm/tutorials/Hello/Tutorial/01_general.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/02_idl.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/03_executors.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/04_ami4ccm.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/05_compilation.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/Deployment
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/Deployment/descriptors
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/Deployment/descriptors/artifacts.cdp
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/Deployment/descriptors/connections.cdp
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/Deployment/descriptors/implementation.cdp