@@ -11,8 +11,8 @@
 
 module Shapes
 {
-  typedef sequence<ShapeType> ShapeTypeSeq;
-  module ::CCM_DDS::Typed < ::ShapeType, ShapeTypeSeq> ShapesConnector;
+  typedef sequence<ShapeType_msg> ShapeType_msgSeq;
+  module ::CCM_DDS::Typed < ::ShapeType_msg, ShapeType_msgSeq> ShapesConnector;
 };
 
 #endif /* SHAPES_CONN_IDL_ */
